fix(admin): 移除移动端和桌面端内容区域overflow:hidden限制

--- a/Kirameku-backend/admin/src/style/sidebar.scss
+++ b/Kirameku-backend/admin/src/style/sidebar.scss
@@ -2,13 +2,13 @@
 @mixin merge-style($sideBarWidth) {
   @media screen and (width >= 150px) and (width <= 420px) {
     .app-main-nofixed-header {
-      overflow-y: hidden;
+      overflow-y: visible;
     }
   }
 
   @media screen and (width >= 420px) {
     .app-main-nofixed-header {
-      overflow: hidden;
+      overflow: visible;
     }
   }
 
